# kurs_num2

./: .gitignore  README.md  main.py  pyproject.toml
data/: README.md  vacancies.json
src/: __init__.py  hh_api.py  storage.py  vacancy.py
src/api/: __init__.py  abstract_api.py  hh_api.py  storage.py
tests/: __init__.py  test_abstract_api.py  test_hh_api.py  test_storage.py  test_vacancy.py
